# proiect-poo

./: CMakeLists.txt  README.md  main.cpp  tastatura.txt
.github/actions/configure-cmake/: action.yml
sources/: CarteBucate.cpp  CarteBucate.h  Exceptii.cpp  Exceptii.h  Ingredient.cpp  Ingredient.h  Instructiune.cpp  Instructiune.h  Meniu.cpp  Meniu.h  Produs.cpp  Produs.h  Reteta.cpp  Reteta.h  RetetaBautura.cpp  RetetaBautura.h  RetetaDesert.cpp  RetetaDesert.h  RetetaMancare.cpp  RetetaMancare.h  Stoc.cpp  Stoc.h  cartebucate.cpp  cartebucate.h  check.cpp  check.h  ingredient.cpp  ingredient.h  instructiune.cpp  instructiune.h  reteta.cpp  reteta.h  stoc.cpp  stoc.h
sources/sterge/: AbstractIngredient.h
